Add VulkanEngine project & update GameEngine img

--- a/data/en/projects.toml
+++ b/data/en/projects.toml
@@ -22,7 +22,15 @@ title = "Custom 2D Game Engine"
 date = "2025-06-30"
 description = "A custom 2D Game Engine almost from scratch as a exam project, built for Burger Time clone. It has SaaS (Sound as a Service), JSON level loading, XInput gamepad support, etc.!"
 tags = ["C++", "SDL", "XInput"]
-image = "/images/projects/game-engine.jpg"
+image = "/images/projects/game-engine.png"
+featured = true
+
+[[projects]]
+title = "Vulkan Render Engine"
+date = "2025-06-30"
+description = "A custom-built rendering engine developed from scratch using the Vulkan API. Features both dynamic and deferred rendering pipelines with static glTF model support. Includes automated project setup and builds via CMake."
+tags = ["C++", "SDL", "Vulkan"]
+image = "/images/projects/vulkan-render-engine.png"
 featured = true
 
 [[projects]]
