Add project layout & update SoftRay page
- Updated SoftRay project page with overview and features
- Organized project layout for clarity and maintainability

--- a/data/en/projects.toml
+++ b/data/en/projects.toml
@@ -11,17 +11,17 @@
 [[projects]]
 title = "Software Raytracer"
 description = "A software raytracer which i made for an assignment for the Graphics Programming course, including a simplified version of MSAA."
-tags = ["C++", "CMake"]
+tech = ["C++", "CMake"]
 image = "/images/projects/RayTracing_Buffer_Reference_Combined.png"
 github = "https://github.com/gwuan/Software-Raytracer"
-link = "https://github.com/gwuan/Software-Raytracer"
+link = "software-raytracer"
 featured = true
 
 [[projects]]
 title = "Custom 2D Game Engine"
 date = "2025-06-30"
 description = "A custom 2D Game Engine almost from scratch as a exam project, built for Burger Time clone. It has SaaS (Sound as a Service), JSON level loading, XInput gamepad support, etc.!"
-tags = ["C++", "SDL", "XInput"]
+tech = ["C++", "SDL", "XInput"]
 image = "/images/projects/game-engine.png"
 featured = true
 
@@ -29,7 +29,7 @@ featured = true
 title = "Vulkan Render Engine"
 date = "2025-06-30"
 description = "A custom-built rendering engine developed from scratch using the Vulkan API. Features both dynamic and deferred rendering pipelines with static glTF model support. Includes automated project setup and builds via CMake."
-tags = ["C++", "SDL", "Vulkan"]
+tech = ["C++", "SDL", "Vulkan"]
 image = "/images/projects/vulkan-render-engine.png"
 featured = true
 
@@ -37,7 +37,7 @@ featured = true
 title = "Haunted Havoc"
 date = "2025-06-30"
 description = "A game made in Unreal Engine which has been made with a group of total 5 members including for our Game Projects course. During development we have experienced 3 different phases: preproduction, production and polish."
-tags = ["Unreal Engine", "C++"]
+tech = ["Unreal Engine", "C++"]
 image = "/images/projects/haunted-havoc.jpg"
 youtube = "https://youtu.be/07HAFmM_7Q8"
 link = "https://xpromusje.itch.io/hauntedhavoc"
