add & config  profile picture

--- a/data/en/author.toml
+++ b/data/en/author.toml
@@ -2,7 +2,7 @@
   name = "Jelle Rubbens"
   location = "Belgium"
   description = "A Game Development student at Howest Digital Art & Entertainment (DAE), currently looking for an internship in spring 2026. I mainly work with C++ and enjoy getting into the technical side of things. Take a look at my projects to see what I've done over the years!"
-  profile_image = "/images/profile-picture-template.jpg"
+  profile_image = "/images/profile-picture.jpg"
 
   # Social links
   github = "https://github.com/Gwuan"
