--- a/data/nl/author.toml
+++ b/data/nl/author.toml
@@ -2,7 +2,7 @@
   name = "Jelle Rubbens"
   location = "België"
   description = "Game development Student aan Howest Digital Arts & Entertainment (DAE), momenteel op zoek naar een stage in het voorjaar van 2026. Ik werk voornamelijk met C++ en vind het heel interessant om me te verdiepen in de technische kant van dingen.  Neem alvast een kijkje bij mijn projecten om te zien wat ik de afgelopen jaren heb gedaan!"
-  profile_image = "/images/profile-picture-template.jpg"
+  profile_image = "/images/profile-picture.jpg"
   
   # Social links
   github = "https://github.com/Gwuan"
