--- a/data/nl/projects.toml
+++ b/data/nl/projects.toml
@@ -1,6 +1,20 @@
 [[projects]]
+title = "Souper Bloody"
+description = "Een dungeon crawler, hack-and-slash game die zich momenteel in productie plaats vind voor het vak Group Projects. Het doel van dit project is om het te release op steam en het in te sturen in verschillende award competities, zoals Belgian Game Awards en The Rookies. Updates volgen!"
+tech = ["C#", "Unity"]
+image = "/images/projects/souper-bloody.png"
+featured = false
+
+[[projects]]
+title = "Eindwerk: VR optimalisatie om het batterijverbruik te verminderen"
+description = "Ik ben momenteel bezig met mijn eindwerk, een vergelijkend onderzoek over hoe je VR-games kunt optimaliseren om het batterijverbruik te verminderen, terwijl je een hoge framrate en visuale kwaliteit behoudt. Ik zal deze pagina bijwerken zodra ik klaar ben om mijn bevindingen te delen!"
+tech = ["C#", "Unity", "VR"]
+image = "/images/projects/pexels-anna-2037514238-29929136.jpg"
+featured = false
+
+[[projects]]
 title = "Software Raytracer"
-description = "A software raytracer which i made for an assignment for the Graphics Programming course, including a simplified version of MSAA."
+description = "Een kleine software raytracer die ik heb gemaakt als opdracht voor het vak Graphics Programming 1, inclusief een eenvoudige implementatie van MSAA als optionele feature."
 tags = ["C++", "CMake"]
 image = "/images/projects/RayTracing_Buffer_Reference_Combined.png"
 github = "https://github.com/gwuan/Software-Raytracer"
@@ -10,7 +24,7 @@ featured = true
 [[projects]]
 title = "Custom 2D Game Engine"
 date = "2025-06-30"
-description = "A custom 2D Game Engine almost from scratch as a exam project, built for Burger Time clone. It has SaaS (Sound as a Service), JSON level loading, XInput gamepad support, etc.!"
+description = "Een persoonlijke 2D game engine die ik bijna vanaf nul heb opgebouwd als examenopdracht voor het vak programming en die momenteel wordt gerefactored. De engine bevat SaaS (Sound as a Service), JSON level loading, XInput gamepad ondersteuning en meer!"
 tags = ["C++", "SDL", "XInput"]
 image = "/images/projects/game-engine.png"
 featured = true
@@ -18,7 +32,7 @@ featured = true
 [[projects]]
 title = "Vulkan Render Engine"
 date = "2025-06-30"
-description = "A custom-built rendering engine developed from scratch using the Vulkan API. Features both dynamic and deferred rendering pipelines with static glTF model support. Includes automated project setup and builds via CMake."
+description = "Een zelfontwikkelde render-engine voor Graphics Programming 2, gebaseerd op de Vulkan API. De engine ondersteunt moderne technieken zoals bindless rendering, dynamic rendering en een deferred rendering pipeline, evenals statische glTF-modellen (geen skinned models). Shaders worden tijdens buildtime via CMake van GLSL naar SPIR-V gecompileerd."
 tags = ["C++", "SDL", "Vulkan"]
 image = "/images/projects/vulkan-render-engine.png"
 featured = true
