--- a/data/nl/author.toml
+++ b/data/nl/author.toml
@@ -6,5 +6,5 @@
   
   # Social links
   github = "https://github.com/Gwuan"
-  linkedin = "https://linkedin.com/in/jelle-rubbens-3b0575200"
+  linkedin = "https://linkedin.com/in/jellerubbens"
   email = "jellerubbens@hotmail.be"
