--- a/hugo.toml
+++ b/hugo.toml
@@ -18,21 +18,17 @@ defaultContentLanguageInSubdir = true
     contentDir = "content/en"
     [languages.en.menu]
       [[languages.en.menu.main]]
-        name = "About"
-        pageRef = "/about"
-        weight = 1
-      [[languages.en.menu.main]]
         name = "Experience"
         pageRef = "/experience"
-        weight = 2
+        weight = 1
       [[languages.en.menu.main]]
         name = "Projects"
         pageRef = "/projects"
-        weight = 3
+        weight = 2
       [[languages.en.menu.main]]
         name = "Contact"
         pageRef = "/contact"
-        weight = 4
+        weight = 3
   [languages.nl]
     languageName = "Nederlands"
     title = "Jelle Rubbens | portfolio"
@@ -40,21 +36,17 @@ defaultContentLanguageInSubdir = true
     contentDir = "content/nl"
     [languages.nl.menu]
       [[languages.nl.menu.main]]
-        name = "Over mij"
-        pageRef = "/about"
-        weight = 1
-      [[languages.nl.menu.main]]
         name = "Ervaring"
         pageRef = "/experience"
-        weight = 2
+        weight = 1
       [[languages.nl.menu.main]]
         name = "Projecten"
         pageRef = "/projects"
-        weight = 3
+        weight = 2
       [[languages.nl.menu.main]]
         name = "Contact"
         pageRef = "/contact"
-        weight = 4
+        weight = 3
 
 [taxonomies]
 category = "categories"
@@ -66,8 +58,8 @@ profile_image = "/images/profile-picture.jpg"
 email = "jellerubbens@hotmail.be"
 github = "https://github.com/Gwuan"
 github_username = "Gwuan"
-linkedin = "https://www.linkedin.com/in/jelle-rubbens-3b0575200/"
-linkedin_username = "jelle-rubbens-3b0575200"
+linkedin = "https://www.linkedin.com/in/jellerubbens/"
+linkedin_username = "jellerubbens"
 
 [menu]
   [[menu.main]]
